--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/LuisCasillasA/my_launchx_app/issues"
   },
-  "homepage": "https://github.com/LuisCasillasA/my_launchx_app#readme"
+  "homepage": "https://github.com/LuisCasillasA/my_launchx_app#readme",
+  "devDependencies": {
+    "jest": "^28.0.3"
+  }
 }
